cabal-version: 3.0
name: lispthings
version: 0

library
  build-depends:
    base,
    bytestring,
    containers,
    megaparsec == 9.2.2,
    parser-combinators,
    text,
    text-ansi,
    transformers,
  default-extensions:
    BlockArguments
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    RootsOfLisp
  ghc-options: -Wall
  hs-source-dirs: .
